- Added first version of DynamicFormRenderer - Modified input properties
- Added hability to bind nested properties

- Added Backend test

- Upgraded UF & Errai versions

- Fixed error refreshing field component after dropping it on the layout.

- Added support for nested forms on dynamic form renderer

- Fixed issue when Field Properties Modal wasn't properly closed.

- Fixed issue adding unbinded fields

Update to Errai 4.0, GWT 2.8.0-beta1, and Java 8.

- Created specific module for the Form Layout generation to simplify the dependency config on other modules that use the dynamic renderer.

- Dependency cleanup